# vm-attest-proto

./: Cargo.toml  build.rs
.github/workflows/: lint.yaml  test.yaml
src/: lib.rs  socket.rs
