[package]
name = "vm-attest-trait"
version = "0.1.0"
edition = "2024"

[dependencies]
dice-verifier = { git = "https://github.com/oxidecomputer/dice-util", features = ["mock"] }
ed25519-dalek = { version = "2.1", default-features = false }
x509-cert.version = "0.2.5"

[build-dependencies]
anyhow.version = "1.0.100"
